fix main content alignment

--- a/client/private/scss/layout/_footer.scss
+++ b/client/private/scss/layout/_footer.scss
@@ -5,7 +5,7 @@
 .l-footer {
   position: absolute;
   bottom: 0;
-  max-width: 100%;
+  left: 0;
   width: 100%;
   margin-top: $grid-gutter-width;
 }
